Bug 408035 - Plastik decoration theme doesn't react to border size changes
Summary: Plastik decoration theme doesn't react to border size changes
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: aurorae (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D22665
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-28 14:55 UTC by Vlad Zahorodnii
Modified: 2019-07-29 18:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
vlad.zahorodnii: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vlad Zahorodnii 2019-05-28 14:55:36 UTC
The title is self-explanatory.
Comment 1 Vlad Zahorodnii 2019-07-29 18:23:12 UTC
Git commit 53936854c7daa145dfd25cb9b75a2b33699e5acf by Vlad Zagorodniy.
Committed on 29/07/2019 at 18:23.
Pushed by vladz into branch 'master'.

[aurorae] Make QML-based decoration themes react to border size changes

Summary:
Currently only SVG-based decoration themes react to border size changes.
QML-based decoration themes on the other hand, for example Plastik, don't
react to such changes, only new windows will have decorations with the
new border size.

Reviewers: #kwin

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D22665

M  +12   -1    plugins/kdecorations/aurorae/src/aurorae.cpp

https://commits.kde.org/kwin/53936854c7daa145dfd25cb9b75a2b33699e5acf